<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entry_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.views.fragments.MainFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="92dp"
        android:text="@string/EntrySms"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/entry"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="247dp"
        android:background="@drawable/button_cont"
        android:text="@string/NumberButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberEdit" />

    <EditText
        android:id="@+id/NumberEdit"
        android:layout_width="303dp"
        android:layout_height="56dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/Number"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>